--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="assets/EleqtLogo.svg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eleqt - Premium EV Rentals</title>
+    <title>Eleqt - Premium Chauffeur Rides</title>
     <!-- Razorpay Script -->
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
